cmake_minimum_required(VERSION 3.17)
project(heig_rrh_labo_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(heig_rrh_labo_3 main.cpp saisieDate.h saisieDate.cpp moisLitteral.cpp moisLitteral.h calculerPremierJour.h calculerPremierJour.cpp calculerBissextile.h calculerNbJourMois.h calculerBissextile.cpp calculerNbJourMois.cpp moisLitteral.h moisLitteral.cpp saisieDate.cpp)